sorted/tests/02-not-enum.stderr
error: expected `enum`
  --> tests/02-not-enum.rs:32:5
   |
32 | pub struct Error {
   |     ^^^^^^
